--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "api",
   "version": "1.0.0",
   "private": true,
+  "engines": {
+    "node": "14.18.1",
+    "npm": "6.14.15"
+  },
   "scripts": {
     "dev": "node ace serve --watch",
     "build": "node ace build --production",
